2008-09-17  Mark Wielaard  <mjw@redhat.com>

	* forkwait.c: Low byte of flags is always set to SIGCHLD.

2008-09-17  Mark Wielaard  <mjw@redhat.com>

	* timer.c: Timer id can be arbitrary number.

2008-09-17  Mark Wielaard  <mjw@redhat.com>

	* swap.c: Don't try including unnecessary asm/page.h.

2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	* test.tcl: Support noexec /tmp by creating test directory
	under build tree instead of /tmp.

2007-10-12 David Wilder <dwilder@us.ibm.com>

	* timer.c: init tid to 0 to workaround bug on s390x.

2007-10-11 David Wilder <dwilder@us.ibm.com>

	* futimes.c: Only test system calls that have 
		     numbers assigned in asm/unistd.h. (see PR:4902)

2007-10-09  Martin Hunt  <hunt@redhat.com>

	* rt_signal.c: Fix expected results for IA64.

2007-10-09  Martin Hunt  <hunt@redhat.com>

	* rt_signal.c: Fix expected patterns to match
	recent changes in tapsets. 

	* signal.c: Use syscall(). Fix expected patterns.

2007-10-01  Martin Hunt  <hunt@redhat.com>

	* test.tcl (run_one_test): Append newlines when
	using send_log().

2007-09-25  Martin Hunt  <hunt@redhat.com>

	* test.tcl (run_one_test): Fix unsupported results.
	Send failure diffs to log.

2007-09-24  Martin Hunt  <hunt@redhat.com>

	* link.c (main): Don't check result code.

2007-09-19  Martin Hunt  <hunt@redhat.com>
	PR 4931
	* test-debug.tcl (cleanup): Remove print.
	* README: Update.
	* syscall.exp: Source test.tcl and call run_one_test()
	from there.
	* test.tcl: Rewrite as a function. Do compilation
	as well as testing. Compile into and execute in
	a directory in /tmp.
	
2007-09-17  Martin Hunt  <hunt@redhat.com>

	* timer.c (main): Remove the return value checks.

2007-08-22  Martin Hunt  <hunt@redhat.com>

	* futimes.c (main): Add utimensat tests.

2007-08-16  Martin Hunt  <hunt@redhat.com>

	* all_syscalls.stp: New file.  Useful for debugging.

2007-07-31  Martin Hunt  <hunt@redhat.com>

	* clock.c (main): Change flags to hex.
